# hermes

./: LICENSE.txt  development log.odt
android/app/: build.gradle
android/app/src/androidTest/java/com/bgcottrell/hermes/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  hermes.cpp
android/app/src/main/java/com/bgcottrell/hermes/: MainActivity.java
android/app/src/main/res/layout/: activity_fullscreen.xml
android/app/src/main/res/values/: strings.xml  styles.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/bgcottrell/hermes/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
linux/: CMakeLists.txt  droidsansfont.h  main.cpp
